# queue

./: .travis.yml  CMakeLists.txt  ClientMain_8cpp.html  ClientMain_8cpp__incl.map  ClientMain_8cpp__incl.md5  Client_8cpp.html  Client_8cpp__incl.map  Client_8cpp__incl.md5  Client_8h.html  Client_8h__dep__incl.map  Client_8h__dep__incl.md5  Client_8h__incl.map  Client_8h__incl.md5  Client_8h_source.html  CommandContext_8cpp.html  CommandContext_8cpp__incl.map  CommandContext_8cpp__incl.md5  CommandContext_8h.html  CommandContext_8h__dep__incl.map  CommandContext_8h__dep__incl.md5  CommandContext_8h__incl.map  CommandContext_8h__incl.md5  CommandContext_8h_source.html  CommandExecutor_8cpp.html  CommandExecutor_8cpp__incl.map  CommandExecutor_8cpp__incl.md5  CommandExecutor_8h.html  CommandExecutor_8h__dep__incl.map  CommandExecutor_8h__dep__incl.md5  CommandExecutor_8h__incl.map  CommandExecutor_8h__incl.md5  CommandExecutor_8h_source.html  CommandHandler_8cpp.html  CommandHandler_8cpp__incl.map  CommandHandler_8cpp__incl.md5  CommandHandler_8h.html  CommandHandler_8h__dep__incl.map  CommandHandler_8h__dep__incl.md5  CommandHandler_8h__incl.map  CommandHandler_8h__incl.md5  (+391 more)
client/: CMakeLists.txt  Client.cpp  Client.h  ClientApi.cpp  ClientApi.h  ClientMain.cpp  Consumer.cpp  ConsumerApiClient.cpp  ConsumerApiClient.h  IApiClient.h  IConsumerApiClient.h  IProducerApiClient.h  Producer.h  ProducerApiClient.cpp  ProducerApiClient.h  ThreadedActor.h
clientapi/: Api.cpp  Api.h  CMakeLists.txt  ConsumerApiClient.cpp  ConsumerApiClient.h  Handle.h  IApiClient.h  IConsumerApiClient.h  IProducerApiClient.h  ProducerApiClient.cpp  ProducerApiClient.h
clientlib/: CMakeLists.txt  IConsumerApiClient.h  ProducerApiClient.cpp
common/: Defines.h
doc/: Doxyfile
protocol/: CMakeLists.txt  Message.cpp  Message.h  ProtocolSerializer.cpp  ProtocolSerializer.h
scripts/: consumer_client.bat  consumer_client.sh  producer_client.bat  producer_client.sh  server.bat  server.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  (+37 more)
server/: CMakeLists.txt  CommandContext.cpp  CommandContext.h  CommandExecutor.cpp  CommandExecutor.h  CommandHandler.cpp  CommandHandler.h  CompleteCommand.cpp  CompleteCommand.h  Consumer.cpp  Consumer.h  Context.cpp  Context.h  DequeueCommandHandler.cpp  DequeueCommandHandler.h  EnqueueCommandHandler.cpp  EnqueueCommandHandler.h  IConsumer.h  IProducer.h  IProducerApiServer.h  IQueueManager.h  IShrink.h  Item.h  Producer.cpp  Producer.h  ProducerApiServer.cpp  ProducerApiServer.h  Queue.cpp  Queue.h  QueueListCommandHandler.cpp  QueueListCommandHandler.h  QueueManager.cpp  QueueManager.h  QueueStorage.cpp  QueueStorage.h  Server.cpp  Server.h  ServerMain.cpp  Session.cpp  Session.h  (+5 more)
serverlib/: CMakeLists.txt  CommandContext.h  CommandExecutor.cpp  CommandExecutor.h  CommandHandler.h  CompleteCommand.cpp  CompleteCommand.h  Consumer.cpp  Consumer.h  Context.cpp  Context.h  DequeueCommandHandler.cpp  DequeueCommandHandler.h  EnqueueCommandHandler.cpp  EnqueueCommandHandler.h  IConsumer.h  IContextHandler.h  IProducer.h  Producer.cpp  Producer.h  Queue.cpp  Queue.h  QueueListCommandHandler.cpp  QueueListCommandHandler.h  QueueManager.cpp  QueueManager.h  QueueStorage.cpp  QueueStorage.h  Server.cpp  Server.h  ServerMain.cpp  Session.cpp  Session.h  StartSessionCommandHandler.cpp  StartSessionCommandHandler.h  ThreadPool.cpp  ThreadPool.h  ThreadedActor.h  ThreadedConsumer.h  Worker.cpp  (+1 more)
tests/: CMakeLists.txt  Main.cpp  QueueIntegrationTest.cpp  QueueMapTest.cpp  QueueServerTest.cpp
